--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,12 @@
 <resources>
     <string name="app_name">WeBuy</string>
     <!-- Strings related to login -->
-    <string name="prompt_email">Email</string>
-    <string name="prompt_password">Password</string>
-    <string name="action_sign_in">Sign in or register</string>
-    <string name="action_sign_in_short">Sign in</string>
-    <string name="welcome">"Welcome !"</string>
-    <string name="invalid_username">Not a valid username</string>
-    <string name="invalid_password">Password must be >5 characters</string>
-    <string name="login_failed">"Login failed"</string>
+    <string name="prompt_email">Votre adresse email</string>
+    <string name="prompt_password">Mot de passe</string>
+    <string name="action_sign_in">Connectez-vous ou inscrivez-vous</string>
+    <string name="action_sign_in_short">Connexion</string>
+    <string name="welcome">"Bienvenue"</string>
+    <string name="invalid_username">Pas un email valid</string>
+    <string name="invalid_password">Plus de 5 caractéres sont requis pour le mot de passe</string>
+    <string name="login_failed">"Echec dans la connexion"</string>
 </resources>
