--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,24 @@
 <resources>
-    <string name="app_name">WeBuy</string>
-    <!-- Strings related to login -->
-    <string name="prompt_email">Votre adresse email</string>
-    <string name="prompt_password">Mot de passe</string>
-    <string name="action_sign_in">Connectez-vous ou inscrivez-vous</string>
-    <string name="action_sign_in_short">Connexion</string>
-    <string name="welcome">"Bienvenue"</string>
-    <string name="invalid_username">Pas un email valid</string>
-    <string name="invalid_password">Plus de 5 caractéres sont requis pour le mot de passe</string>
-    <string name="login_failed">"Echec dans la connexion"</string>
-    <string name="title_activity_shop_list">ShopList</string>
+    <string name="app_name">Webay2</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="nav_header_title">Android Studio</string>
+    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_desc">Navigation header</string>
+    <string name="action_settings">Settings</string>
+
+    <string name="menu_stores">Stores</string>
+    <string name="menu_gallery">Gallery</string>
+    <string name="menu_slideshow">Slideshow</string>
+    <string name="menu_tools">Tools</string>
+    <string name="menu_share">Share</string>
+    <string name="menu_send">Send</string>
+
+
+    <string name="description_magasin_carrefour">A rose is a woody perennial flowering plant of the genus Rosa, in the family Rosaceae, or the flower it bears. There are over a hundred species and thousands of cultivars.</string>
+    <string name="description_magasin_lidl">Dianthus caryophyllus, the carnation or clove pink, is a species of Dianthus. It is probably native to the Mediterranean region but its exact range is unknown due to extensive cultivation for the last 2,000 years.</string>
+    <string name="description_magasin_casino">Tulips form a genus of spring-blooming perennial herbaceous bulbiferous geophytes. The flowers are usually large, showy and brightly coloured, generally red yellow or white.</string>
+    <string name="description_magasin_intermarche">Bellis perennis is a common European species of daisy, of the Asteraceae family, often considered the archetypal species of that name.</string>
+
+
 </resources>
